Adds planning obligation to appeal documents

--- a/app/views/appellant-submission/v14/before-you-start/claiming-costs.html
+++ b/app/views/appellant-submission/v14/before-you-start/claiming-costs.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-007" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Are you claiming costs as part of your appeal?- Before you start - {{serviceName}} - GOV.UK
