--- a/app/views/appellant-submission/v14/before-you-start/notice-decision-date.html
+++ b/app/views/appellant-submission/v14/before-you-start/notice-decision-date.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-005" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   What's the decision date on the letter from the local planning department?​ - Before you start - {{serviceName}} - GOV.UK
