--- a/app/views/appellant-submission/v14/before-you-start/planning-department.html
+++ b/app/views/appellant-submission/v14/before-you-start/planning-department.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-001" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Which local planning department dealt with your planning application?
