--- a/app/views/appellant-submission/v14/before-you-start/removal-variation-conditions.html
+++ b/app/views/appellant-submission/v14/before-you-start/removal-variation-conditions.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-011" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Are the conditions for householder planning permission? - Before you start - {{serviceName}} - GOV.UK
