--- a/app/views/appellant-submission/v14/before-you-start/shutter/out-of-time-full.html
+++ b/app/views/appellant-submission/v14/before-you-start/shutter/out-of-time-full.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-OOT-1" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   You cannot appeal - {{serviceName}} - GOV.UK
