--- a/app/views/appellant-submission/v14/full/appeal-documents/plans-drawings.html
+++ b/app/views/appellant-submission/v14/full/appeal-documents/plans-drawings.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-APP-002" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Plans and drawings - Upload documents for your appeal - {{serviceName}} - GOV.UK
