--- a/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings-other-tenants.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings-other-tenants.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-AAS-013" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Are there any other tenants? - Tell us about the appeal site - {{serviceName}} - GOV.UK
