--- a/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-AAS-011" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Is the appeal site part of an agricultural holding? - Tell us about the appeal site - {{serviceName}} - GOV.UK
