--- a/app/views/appellant-submission/v14/full/appeal-site/site-address.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/site-address.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-AAS-001" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   What is the address of the appeal site? - Upload documents for your appeal - {{serviceName}} - GOV.UK
