--- a/app/views/appellant-submission/v14/full/contact-details/who-are-you.html
+++ b/app/views/appellant-submission/v14/full/contact-details/who-are-you.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-PYC-001" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Was the planning application made in your name? - Provide your contact details - {{serviceName}} - GOV.UK
