--- a/app/views/appellant-submission/v14/full/contact-details/your-details.html
+++ b/app/views/appellant-submission/v14/full/contact-details/your-details.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-PYC-003" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Contact details - Provide your contact details - {{serviceName}} - GOV.UK
