--- a/app/views/appellant-submission/v14/full/planning-application-documents/certificates.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/certificates.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-PLA-XXX" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
 Does the application form include site ownership and agricultural holdings certificates? - Upload documents from your planning application - {{serviceName}} - GOV.UK
