--- a/app/views/appellant-submission/v14/full/procedure-type/decide.html
+++ b/app/views/appellant-submission/v14/full/procedure-type/decide.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-DYA-001" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   How would you prefer us to decide your appeal? - Tell us how you would like us to decide your appeal - {{serviceName}} - GOV.UK
