--- a/app/views/appellant-submission/v14/full/task-list.html
+++ b/app/views/appellant-submission/v14/full/task-list.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-TL" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Task list - Appeal a planning decision - {{serviceName}} - GOV.UK
