--- a/app/views/appellant-submission/v14/before-you-start/appeal-about.html
+++ b/app/views/appellant-submission/v14/before-you-start/appeal-about.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-009" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Was your planning application about any of the following? - Before you start - {{serviceName}} - GOV.UK
