--- a/app/views/appellant-submission/v14/before-you-start/check-answers.html
+++ b/app/views/appellant-submission/v14/before-you-start/check-answers.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-CYA" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   You can appeal using this service - Before you start - {{serviceName}} - GOV.UK
