--- a/app/views/appellant-submission/v14/before-you-start/decision-date-due.html
+++ b/app/views/appellant-submission/v14/before-you-start/decision-date-due.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-008" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   What date was your decision due? - Before you start - {{serviceName}} - GOV.UK
