--- a/app/views/appellant-submission/v14/before-you-start/enforcement-notice.html
+++ b/app/views/appellant-submission/v14/before-you-start/enforcement-notice.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-006" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Have you received an enforcement notice? - Before you start - {{serviceName}} - GOV.UK
