--- a/app/views/appellant-submission/v14/before-you-start/listed-building.html
+++ b/app/views/appellant-submission/v14/before-you-start/listed-building.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-003" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Was your planning application about a listed building? - Before you start - {{serviceName}} - GOV.UK
