--- a/app/views/appellant-submission/v14/before-you-start/prior-approval.html
+++ b/app/views/appellant-submission/v14/before-you-start/prior-approval.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-010" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Did you apply for prior approval to extend an existing home? - Before you start - {{serviceName}} - GOV.UK
