--- a/app/views/appellant-submission/v14/before-you-start/what-are-you-appealing.html
+++ b/app/views/appellant-submission/v14/before-you-start/what-are-you-appealing.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-BYS-002" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   What type of planning application is your appeal about? - Before you start - {{serviceName}} - GOV.UK
