--- a/app/views/appellant-submission/v14/full/appeal-documents/appeal-statement.html
+++ b/app/views/appellant-submission/v14/full/appeal-documents/appeal-statement.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-APP-001" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Your appeal statement - Upload documents for your appeal - {{serviceName}} - GOV.UK
