--- a/app/views/appellant-submission/v14/full/appeal-documents/planning-obligation-status.html
+++ b/app/views/appellant-submission/v14/full/appeal-documents/planning-obligation-status.html
@@ -1,8 +1,8 @@
-{% set pageref = "AS14-BYS-004" %}
+{% set pageref = "AS14-FUL-APP-XXX" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
-  Was your planning application granted or refused? - Before you start - {{serviceName}} - GOV.UK
+What is the status of your planning obligation? - Upload documents for your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -22,41 +22,38 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
+    
       <form action="" method="post">
 
         <span class="govuk-caption-l">
-          Before you start
+          Upload documents for your appeal
         </span>
 
         {{ govukRadios({
-          idPrefix: "appealsub-"+version+"-bys-permissiongrantedrefused",
-          name: "appealsub-"+version+"-bys-permissiongrantedrefused",
+          idPrefix: "appealsub-"+version+"-appealdocs-planningobligation-status",
+          name: "appealsub-"+version+"-appealdocs-planningobligation-status",
           fieldset: {
             legend: {
-              text: "Was your planning application granted or refused?",
+              text: "What is the status of your planning obligation?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--l"
             }
           },
           items: [
             {
-              value: "Granted",
-              text: "Granted",
-              checked: checked("appealsub-"+version+"-bys-permissiongrantedrefused", "Granted")
+              value: "Finalised and ready to submit",
+              text: "Finalised and ready to submit",
+              checked: checked("appealsub-"+version+"-appealdocs-planningobligation-status", "Finalised and ready to submit")
             },
             {
-              value: "Refused",
-              text: "Refused",
-              checked: checked("appealsub-"+version+"-bys-permissiongrantedrefused", "Refused")
+              value: "In draft",
+              text: "In draft",
+              checked: checked("appealsub-"+version+"-appealdocs-planningobligation-status", "In draft")
             },
             {
-              divider: "or"
-            },
-            {
-              value: "I have not received a decision",
-              text: "I have not received a decision",
-              checked: checked("appealsub-"+version+"-bys-permissiongrantedrefused", "I have not received a decision")
+              value: "Not started yet",
+              text: "Not started yet",
+              checked: checked("appealsub-"+version+"-appealdocs-planningobligation-status", "Not started yet")
             }
           ]
         }) }}
