--- a/app/views/appellant-submission/v14/full/appeal-documents/supporting-documents-upload.html
+++ b/app/views/appellant-submission/v14/full/appeal-documents/supporting-documents-upload.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-APP-005" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   New supporting documents - Upload documents for your appeal - {{serviceName}} - GOV.UK
