--- a/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings-tell-tenants.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings-tell-tenants.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-AAS-014" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Telling the tenants - Tell us about the appeal site - {{serviceName}} - GOV.UK
