--- a/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings-tenant.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings-tenant.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-AAS-012" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Are you a tenant of the agricultural holding? - Tell us about the appeal site - {{serviceName}} - GOV.UK
