--- a/app/views/appellant-submission/v14/full/appeal-site/health-safety.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/health-safety.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-AAS-016" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Are there any health and safety issues on the appeal site? - Tell us about the appeal site - {{serviceName}} - GOV.UK
