--- a/app/views/appellant-submission/v14/full/appeal-site/knows-none/advertising-appeal.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/knows-none/advertising-appeal.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-AAS-010" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Advertising your appeal - Tell us about the appeal site - {{serviceName}} - GOV.UK
