--- a/app/views/appellant-submission/v14/full/appeal-site/own-land.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/own-land.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-AAS-002" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Do you own all the land involved in the appeal? - Tell us about the appeal site - {{serviceName}} - GOV.UK
