--- a/app/views/appellant-submission/v14/full/appeal-site/own-rest.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/own-rest.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-AAS-004" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Do you know who owns the {% if data["appealsub-"+version+"-appealsite-ownsome"] == "Yes" %}rest of the {% endif %}land involved in the appeal? - Tell us about the appeal site - {{serviceName}} - GOV.UK
