--- a/app/views/appellant-submission/v14/full/appeal-site/site-visible.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/site-visible.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-AAS-015" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   How is visibility restricted? - Tell us about the appeal site - {{serviceName}} - GOV.UK
