--- a/app/views/appellant-submission/v14/full/check-your-answers.html
+++ b/app/views/appellant-submission/v14/full/check-your-answers.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-CYA" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Check your answers - Check your answers and submit your appeal - {{serviceName}} - GOV.UK
