--- a/app/views/appellant-submission/v14/full/confirmation.html
+++ b/app/views/appellant-submission/v14/full/confirmation.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-CON" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Appeal submitted - Check your answers and submit your appeal - {{serviceName}} - GOV.UK
