--- a/app/views/appellant-submission/v14/full/contact-details/applicant-name.html
+++ b/app/views/appellant-submission/v14/full/contact-details/applicant-name.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-PYC-002" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   What is the applicant's name? - Provide your contact details - {{serviceName}} - GOV.UK
