--- a/app/views/appellant-submission/v14/full/planning-application-documents/application-number.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/application-number.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-PLA-002" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   What is your planning application number? - Upload documents from your planning application - {{serviceName}} - GOV.UK
