--- a/app/views/appellant-submission/v14/full/planning-application-documents/decision-letter.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/decision-letter.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-PLA-006" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Decision letter - Upload documents from your planning application - {{serviceName}} - GOV.UK
