--- a/app/views/appellant-submission/v14/full/planning-application-documents/design-access-statement-upload.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/design-access-statement-upload.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-PLA-005" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Design and access statement - Upload documents from your planning application - {{serviceName}} - GOV.UK
