--- a/app/views/appellant-submission/v14/full/planning-application-documents/development-changed.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/development-changed.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-PLA-XXX" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
 Did the proposed development change after you submitted your application? - Upload documents from your planning application - {{serviceName}} - GOV.UK
