--- a/app/views/appellant-submission/v14/full/planning-application-documents/plans-drawings-upload.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/plans-drawings-upload.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-PLA-003" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Plans, drawings and supporting documents - Upload documents from your planning application - {{serviceName}} - GOV.UK
