--- a/app/views/appellant-submission/v14/full/procedure-type/common-ground.html
+++ b/app/views/appellant-submission/v14/full/procedure-type/common-ground.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-DYA-005" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Upload your draft statement of common ground - Tell us how you would prefer us to decide your appeal - {{serviceName}} - GOV.UK
