--- a/app/views/appellant-submission/v14/full/procedure-type/hearing/why.html
+++ b/app/views/appellant-submission/v14/full/procedure-type/hearing/why.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-DYA-002" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   Why would you prefer a hearing? - Tell us how you would prefer us to decide your appeal - {{serviceName}} - GOV.UK
