--- a/app/views/appellant-submission/v14/full/procedure-type/inquiry/days.html
+++ b/app/views/appellant-submission/v14/full/procedure-type/inquiry/days.html
@@ -1,5 +1,5 @@
 {% set pageref = "AS14-FUL-DYA-004" %}
-AS14{% extends "layouts/appellant-submission/v14.html" %}
+{% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
   How many days would you expect the inquiry to last? - Tell us how you would prefer us to decide your appeal - {{serviceName}} - GOV.UK
