Changes to appeal check answers data

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -605,7 +605,6 @@ service-start{% extends "layout.html" %}
                           Subject: Return to appeal a planning decision
                         </a>
                       </li>
-
                       <li>
                         <a href="/save-progress/v3/appeal-closed">
                           Appeal closed (return link expired)
@@ -626,23 +625,11 @@ service-start{% extends "layout.html" %}
                           Subject: Return to appeal a planning decision
                         </a>
                       </li>
-                      <!-- <li>
-                        <a href="/save-progress/v3/incomplete-appeals">
-                          Incomplete appeals
-                        </a>
-                      </li> -->
                       <li>
-                        <a href="/save-progress/v3/return-email">
-                          Return email
+                        <a href="/save-progress/v3/task-list?progress=yes">
+                          Task list
                         </a>
                       </li>
-                      <!-- <br>
-                      <li>
-                        <a href="/save-progress/v3/service-start">
-                          Service start
-                        </a>
-                      </li> -->
-
                     </ul>
 
                     <details class="govuk-details" data-module="govuk-details">
