--- a/app/views/save-progress/v3/before-you-continue.html
+++ b/app/views/save-progress/v3/before-you-continue.html
@@ -37,27 +37,44 @@
     <section class="govuk-!-margin-bottom-6">
 
       <p class="govuk-body">
-        You will need to submit the following:
+        Before you appeal, make sure you have:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>your planning application form</li>
-        <li>the plans, drawings and supporting documents you submitted with your application</li>
-        {% if data["bys-"+version+"-permissiongrantedrefused"] != "I have not received a decision" %}
-          <li>the decision letter from your local planning department</li>
-        {% endif %}
-        <li>your design and access statement, if you submitted one with your application</li>
-        <li>your appeal statement</li>
+        <li>
+          your appeal statement
+        </li>
+        <li>
+          your planning application form
+        </li>
+        <li>
+          the site plan for your appeal site
+        </li>
+        <li>
+          the plans, drawings and supporting documents for your application
+        </li>
+        <li>
+          your design and access statement, if you have one
+        </li>
+        <li>
+          the decision letter from the local planning department, if you have one
+        </li>
+        <li>
+          your draft statement of common ground, if you need one
+        </li>
       </ul>
+
+
       <p class="govuk-body">
-        If you do not have a copy of your planning application form, you can search for it on your local planning department's website.
-      </p>
-      <p class="govuk-body">
-        You also have the option to submit:
+        You should have already:
       </p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>plans or drawings that have been updated or created since your application</li>
-        <li>any other documents that you'd like to submit in support of your appeal</li>
+        <li>
+          chosen how you think the Planning Inspectorate should decide your appeal
+        </li>
+        <li>
+          told any other landowners about your appeal
+        </li>
       </ul>
 
     </section>
