--- a/app/views/appellant-submission/v14/full/planning-application-documents/confirming-letter.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/confirming-letter.html
@@ -2,7 +2,7 @@
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
-  Planning application form - Upload documents from your planning application - {{serviceName}} - GOV.UK
+  The letter confirming your planning application - Upload documents from your planning application - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
