Save progress update

--- a/app/views/save-progress/v3/magic-link-email.html
+++ b/app/views/save-progress/v3/magic-link-email.html
@@ -38,9 +38,9 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
       {% if data['savedOn'] == 'start' %}
         <a href="before-you-continue">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
       {% elseif data['savedOn'] == 'task' %}
-        <a href="task-list">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
+        <a href="task-list?progress=yes">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
       {% else %}
-        <a href="task-list">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
+        <a href="task-list?progress=yes">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
       {% endif %}
     </p>
 
