Page refs and full refused skip link

--- a/app/views/appellant-submission/v14/before-you-start/check-answers.html
+++ b/app/views/appellant-submission/v14/before-you-start/check-answers.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-BYS-CYA" %}
+{% set pageref = "BYS-CYA-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
