--- a/app/views/appellant-submission/v14/before-you-start/claiming-costs.html
+++ b/app/views/appellant-submission/v14/before-you-start/claiming-costs.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-BYS-007" %}
+{% set pageref = "BYS-007-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
