--- a/app/views/appellant-submission/v14/before-you-start/shutter/claiming-costs.html
+++ b/app/views/appellant-submission/v14/before-you-start/shutter/claiming-costs.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-BYS-ACP-6" %}
+{% set pageref = "BYS-ACP-6-AS14" %}
 {% extends "layouts/before-you-start/v10.html" %}
 
 {% block pageTitle %}
