--- a/app/views/appellant-submission/v14/full/appeal-documents/planning-obligation-status.html
+++ b/app/views/appellant-submission/v14/full/appeal-documents/planning-obligation-status.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-APP-XXX" %}
+{% set pageref = "FUL-APP-007-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
