--- a/app/views/appellant-submission/v14/full/appeal-documents/plans-drawings-upload.html
+++ b/app/views/appellant-submission/v14/full/appeal-documents/plans-drawings-upload.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-APP-003" %}
+{% set pageref = "FUL-APP-003-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
