--- a/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings-tenant.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings-tenant.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-AAS-012" %}
+{% set pageref = "FUL-AAS-012-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
