--- a/app/views/appellant-submission/v14/full/check-your-answers.html
+++ b/app/views/appellant-submission/v14/full/check-your-answers.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-CYA" %}
+{% set pageref = "FUL-CYA-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
