--- a/app/views/appellant-submission/v14/full/planning-application-documents/application-number.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/application-number.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-PLA-002" %}
+{% set pageref = "FUL-PLA-002-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
