--- a/app/views/appellant-submission/v14/full/planning-application-documents/certificates-upload.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/certificates-upload.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-PLA-XXX" %}
+{% set pageref = "FUL-PLA-008-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
