--- a/app/views/appellant-submission/v14/full/planning-application-documents/decision-letter.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/decision-letter.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-PLA-006" %}
+{% set pageref = "FUL-PLA-006-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
