--- a/app/views/index.html
+++ b/app/views/index.html
@@ -304,8 +304,13 @@ service-start{% extends "layout.html" %}
                         Start from check your answers in 'Before you start':</a>
                         <ul class="govuk-list govuk-list--bullet">
                           <li>
-                            <a href="/appellant-submission/v14/skip/bys-cya-removalvary-nondetermination">Non-determination of appeal for removal or variation of conditions</a>
+                            <a href="/appellant-submission/v14/skip/bys-cya-removalvary-nondetermination">Appeal non-determination of removal or variation of conditions</a>
                           </li>
+                          <li>
+                            <a href="/appellant-submission/v14/skip/bys-cya-full-refused">Appeal refusal of full planning</a>
+                          </li>
+
+                          
                           <!--li>
                             <a href="/appellant-submission/v14/skip/full-bys-cya-refusal">Full appeal refusal</a>
                           </li>
