--- a/app/views/appellant-submission/v14/before-you-start/permission-granted-refused.html
+++ b/app/views/appellant-submission/v14/before-you-start/permission-granted-refused.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-BYS-004" %}
+{% set pageref = "BYS-004-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
