--- a/app/views/appellant-submission/v14/before-you-start/planning-department.html
+++ b/app/views/appellant-submission/v14/before-you-start/planning-department.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-BYS-001" %}
+{% set pageref = "BYS-001-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
