--- a/app/views/appellant-submission/v14/before-you-start/shutter/enforcement-notice.html
+++ b/app/views/appellant-submission/v14/before-you-start/shutter/enforcement-notice.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-BYS-ACP-5" %}
+{% set pageref = "BYS-ACP-5-AS14" %}
 {% extends "layouts/before-you-start/v10.html" %}
 
 {% block pageTitle %}
