--- a/app/views/appellant-submission/v14/before-you-start/shutter/listed-building.html
+++ b/app/views/appellant-submission/v14/before-you-start/shutter/listed-building.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-BYS-ACP-4" %}
+{% set pageref = "BYS-ACP-4-AS14" %}
 {% extends "layouts/before-you-start/v10.html" %}
 
 {% block pageTitle %}
