--- a/app/views/appellant-submission/v14/before-you-start/shutter/lpa-ineligible.html
+++ b/app/views/appellant-submission/v14/before-you-start/shutter/lpa-ineligible.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-BYS-ACP-1" %}
+{% set pageref = "BYS-ACP-1-AS14" %}
 {% set lpaname = "Your local planning department" %}
 {% extends "layouts/before-you-start/v10.html" %}
 
