--- a/app/views/appellant-submission/v14/before-you-start/shutter/planning-application-something-else.html
+++ b/app/views/appellant-submission/v14/before-you-start/shutter/planning-application-something-else.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-BYS-ACP-2" %}
+{% set pageref = "BYS-ACP-2-AS14" %}
 {% extends "layouts/before-you-start/v10.html" %}
 
 {% block pageTitle %}
