--- a/app/views/appellant-submission/v14/full/appeal-documents/appeal-statement.html
+++ b/app/views/appellant-submission/v14/full/appeal-documents/appeal-statement.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-APP-001" %}
+{% set pageref = "FUL-APP-001-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
