--- a/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings-other-tenants.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/agricultural-holdings-other-tenants.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-AAS-013" %}
+{% set pageref = "FUL-AAS-013-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
