--- a/app/views/appellant-submission/v14/full/appeal-site/health-safety.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/health-safety.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-AAS-016" %}
+{% set pageref = "FUL-AAS-016-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
