--- a/app/views/appellant-submission/v14/full/appeal-site/knows-some/tell-landowners.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/knows-some/tell-landowners.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-AAS-008" %}
+{% set pageref = "FUL-AAS-008-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
