--- a/app/views/appellant-submission/v14/full/appeal-site/own-some.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/own-some.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-AAS-003" %}
+{% set pageref = "FUL-AAS-003-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
