--- a/app/views/appellant-submission/v14/full/appeal-site/site-visible.html
+++ b/app/views/appellant-submission/v14/full/appeal-site/site-visible.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-AAS-015" %}
+{% set pageref = "FUL-AAS-015-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
