--- a/app/views/appellant-submission/v14/full/confirmation.html
+++ b/app/views/appellant-submission/v14/full/confirmation.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-CON" %}
+{% set pageref = "FUL-CON-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
