--- a/app/views/appellant-submission/v14/full/procedure-type/decide.html
+++ b/app/views/appellant-submission/v14/full/procedure-type/decide.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-DYA-001" %}
+{% set pageref = "FUL-DYA-001-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
