--- a/app/views/appellant-submission/v14/full/procedure-type/inquiry/days.html
+++ b/app/views/appellant-submission/v14/full/procedure-type/inquiry/days.html
@@ -1,4 +1,4 @@
-{% set pageref = "AS14-FUL-DYA-004" %}
+{% set pageref = "FUL-DYA-004-AS14" %}
 {% extends "layouts/appellant-submission/v14.html" %}
 
 {% block pageTitle %}
