--- a/app/views/save-progress/v3/check-your-answers.html
+++ b/app/views/save-progress/v3/check-your-answers.html
@@ -683,7 +683,7 @@
         {% endif %}
 
         {{ govukButton({
-          href: "declaration",
+          href: "/appellant-submission/v12/full/declaration",
           text: "Continue"
         }) }}
 
