--- a/app/views/save-progress/v3/input-code.html
+++ b/app/views/save-progress/v3/input-code.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Appeal a planning decision" %}
 
-{% set title = "What’s your planning application number?" %}
+{% set title = "Enter the code we sent to your email address" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -17,10 +17,6 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:history.go(-1);"
-  }) }}
 {% endblock %}
 
 {% block content %}
@@ -28,22 +24,18 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-      <form action="what-is-your-email" method="post">
+      <form action="task-list?progress=yes" method="post">
 
         <span class="govuk-caption-l">{{ subServiceName }}</span>
 
         <div class="govuk-form-group">
 
-          <label class="govuk-label govuk-label--l" for="applicationNumber">
+          <label class="govuk-label govuk-label--l" for="email">
             {{ title }}
           </label>
 
-          <div id="applicationNumber-hint" class="govuk-hint">
-            You can find this on communications from your local planning department about your application.
-          </div>
-
           <div class="govuk-form-group">
-            <input class="govuk-input govuk-input--width-10" id="applicationNumber" name="applicationNumber" type="number" spellcheck="false" autocomplete="false" value="{{ data['applicationNumber'] }}">
+            <input class="govuk-input govuk-input--width-5" id="email" name="email" type="text" spellcheck="false" autocomplete=none value="" style="text-transform:uppercase">
           </div>
 
         </div>
@@ -53,6 +45,7 @@
         }) }}
 
       </form>
+
 
     </div>
   </div>
