--- a/app/views/save-progress/v3/return-email.html
+++ b/app/views/save-progress/v3/return-email.html
@@ -41,11 +41,11 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
     <ol class="govuk-list govuk-list--number">
       <li>
-        Go to the link to enter your email address: <a href="input-magic-link-email" class="govuk-link">www.gov.uk/appeal-a-planning-decision/continue</a>
+        Go to the link to receive a code: <a href="input-code" class="govuk-link">www.gov.uk/appeal-a-planning-decision/continue?app=hgdsuyts6t16f</a>
       </li>
 
       <li>
-        Go to the temporary link in the email we send you to continue with your appeal.
+        Enter the code we send in an email to you.
       </li>
     </ol>
 
