--- a/app/assets/sass/pins/govuk.scss
+++ b/app/assets/sass/pins/govuk.scss
@@ -212,3 +212,11 @@ figure {
 .govuk-tag--black {
   background-color: #000000;
 }
+
+.pins-guidance-wrapper {
+  padding-top: 0 !important;
+}
+.pins-fake-search {
+  float: right; 
+  margin-top: -68px;
+}
