--- a/app/views/layouts/layout-guidance.html
+++ b/app/views/layouts/layout-guidance.html
@@ -46,7 +46,7 @@
 {% endblock %}
 
 
-{% set mainClasses = mainClasses | default("govuk-main-wrapper") %}
+{% set mainClasses = mainClasses | default("pins-guidance-wrapper") %}
 
 {% if useAutoStoreData %}
   {% block footer %}
